--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>Feedback Zone</title>
+  <title>Share Your Feedback</title>
 </head>
 
 <body>
